--- a/formularz_Wisniewski.html
+++ b/formularz_Wisniewski.html
@@ -72,6 +72,6 @@
 		<INPUT TYPE="submit" VALUE="PRZEŚLIJ">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		<INPUT TYPE="reset" VALUE="ZRESETUJ">
 		</p>
-		<a HREF="index2.html">Wróć</a>
+		<a HREF="index.html">Wróć</a>
 		</body>
 		</html>
