--- a/poczta_Wisniewski.html
+++ b/poczta_Wisniewski.html
@@ -8,7 +8,7 @@
 <body>
 <A href ="mailto:les1098@gmail.com"><img src="http://www.webkameleon.com/img/cloud/G-Suite.gif" border=0 width=70 height=50>poczta 
 do kuby</A> <br>
-<A HREF="index2.html"> Wróć </A>
+<A HREF="index.html"> Wróć </A>
 
 
 
