--- a/przepis_Wisniewski.html
+++ b/przepis_Wisniewski.html
@@ -7,6 +7,6 @@
 		</head>
 		<body>
 		<A href ="przepis_adamczak.pdf">k&nbsp;l&nbsp;i&nbsp;k&nbsp; aby ściągnąć plik</A>
-		<a HREF="index2.html">wróć</a>
+		<a HREF="index.html">wróć</a>
 		</body>
 	</html>
