--- a/logo_Wisniewski.html
+++ b/logo_Wisniewski.html
@@ -5,5 +5,6 @@
 	<body>
 		<h1 align=center>LOGO - Wisniewski</h1>
 		<p align=center>Gdańsk, 19.01.2022 </p>
+		<img src="logo_Wisniewski.jpg" align="left" ALT="logo firmy Git "HEIGHT=200 WIDTH=700 style="border: 6px solid yellow;" /><font color=brown face="Courier New"><br> <u> Git to<strike> sklep</strike> <sup>zoologiczny</sup> <br>z najlepszej jakosci <br>artykułami zoologicznymi <br> dla twoich zwięrząt<br> </u>
 	</body>
 </html>
