--- a/logo_Wisniewski.html
+++ b/logo_Wisniewski.html
@@ -3,6 +3,6 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<img src="logo_Wisniewski.jpg" align="left" ALT="logo firmy Git "HEIGHT=200 WIDTH=700 style="border: 6px solid yellow;" /><font color=brown face="Courier New"><br> <u> Git to<strike> sklep</strike> <sup>zoologiczny</sup> <br>z najlepszej jakosci <br>artykułami zoologicznymi <br> dla twoich zwięrząt<br> </u>
+		<img src="logo_Wisniewski.jpg" align="left" ALT="logo firmy Git "HEIGHT=500 WIDTH=300 style="border: 6px solid yellow;" /><font color=brown face="Courier New"><br> <u> Git to<strike> sklep</strike> <sup>zoologiczny</sup> <br>z najlepszej jakosci </u>
 	</body>
 </html>
