--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 					<a href="https://www.kuratorium.gda.pl/" target="obszar_glowny">Kuratorium</a>
 				</li>
 					<li>
-					<a href="https://www.youtube.com/" target="obszar_glowny">Strona yt</a>
+					<a href="https://www.youtube.com" target="obszar_glowny">Strona yt</a>
 				</li>
 				      <li>
-					<a href="https://www.wp.pl/" target="obszar_glowny">Strona wp</a>
+					<a href="https://www.wp.pl" target="obszar_glowny">Strona wp</a>
 				</li>
 				</ul>
 				</td>
